# ruzzle-solver

./: .gitignore  .pre-commit-config.yaml  .prospector.yaml  graph.py  in_1.json  in_3.json  in_4.json  loaders.py  main.py  points.py  pyproject.toml  requirements.txt  strategy.py  trie.py
data/: in_1.json  in_2.json  in_3.json  in_4.json  in_big.json  in_bigger.json
ruzzle_solver/: graph.py  loaders.py  points.py  run.py  strategy.py  trie.py
tests/: graph_test.py  loaders_test.py
