[project]
name = "ruzzle-solver"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F", "E", "I", "B"]
ignore = ["B905"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "pyinstrument>=5.0.1",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
